--- a/index.html
+++ b/index.html
@@ -52,13 +52,12 @@
                                 <i class="fa fa-navicon"></i>
                             </button>
                         </div>
-                        <nav id="navbar" class="collapse navbar-collapse">
-                            
-							<!-- <ul id="nav"> -->
-                                <!-- <li class="current-menu-item"><a href="index.html">product</a></li> -->
-                                <!-- <li><a href="about.html">about</a></li> -->
-								<!-- <li><a href="contact.html">contact</a></li> -->
-                            <!-- </ul> -->
+                        <nav id="navbar" class="collapse navbar-collapse">                            
+							<ul id="nav">
+                                <li class="current-menu-item"><a href="index.html">Eyelash Extension Shampoo</a></li>
+                                <li><a href="eyelash-growth-serum.html">Gentle Botanical Eyelash Serum</a></li>
+								<li><a href="about.html">ABOUT US</a></li>
+                            </ul>
                         </nav>
                     </div>
                 </div>
@@ -284,25 +283,7 @@
                 </div>
             </div>
         </div>
-    </div>  	
-
-<div class="postText animated">
-            <div class="preview-single-pages">
-				<div class="footerTxt">
-
-<p><ul><li><strong>How we got our start?</strong></li>
-<li>Our company found that many girls often go to the beauty parlour to do artistic eyelash extension and curl eyelash. After collecting the market customer needs, these products came out after a series of tests.</li></ul></p>
-
-  <p><ul><li><strong>What makes our product unique?</strong></li><li>
-Before release new products, our professional team would test and do the Sample Preparation for Ingredients SDS Testing, Microbiological Testing, Human Skin Closed Patch Test and Heavy Metal Testing to ensure the high-quality products.
-</li><li><strong>Why we love what we do?</strong></li><li>
-Our brand were trying to build confidenceand spread positive energy to our consumers, not just selling a product. We want to make every girls become the angel on the earth.And, we be-lieve our brand can make it!
-</li></ul></p>
-				</div>
-			</div>
-		</div>
-		
-		
+    </div>  			
 		<!-- </article> -->
 
                 <!-- <div class="col-lg-4 col-md-6 animated"> -->
