--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>Eyelash Extension Cleanser, BREYLEE Eyelash Extension Shampoo Eyelash Extension Foam & Brushes Eyelid Cleanser for Makeup Remover Paraben & Sulfate Free for Salon and Home Use(60ml, 2 fl oz)</title>
 
     <!-- main css file -->
-    <link rel="stylesheet" href="css/custom/style.css">
+    <link rel="stylesheet" href="css/custom/style.css?v=1.2">
     <!-- responsive css file -->
-    <link rel="stylesheet" href="css/responsive/responsive.css">
+    <link rel="stylesheet" href="css/responsive/responsive.css?v=1.2">
     <!-- favicon -->
     <link rel="icon" type="image/png" href="img/favicon.png">
 
