update logo icon

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- responsive css file -->
     <link rel="stylesheet" href="css/responsive/responsive.css?v=1.2">
     <!-- favicon -->
-    <link rel="icon" type="image/png" href="img/favicon.png">
+    <link rel="icon" type="image/png" href="img/favicon.png?v=1.2">
 
 
     <!--[if lt IE 9]>
