update about us

--- a/about.html
+++ b/about.html
@@ -9,11 +9,11 @@
     <title>Eyelash Growth Serum, BREYLEE Gentle Botanical Eyelash Serum - Cruelty Free, Hypoallergenic, Got Thicker, Stronger, Healthier Eyelash - (3ml / 0.1 Fl. Oz.)</title>
 
     <!-- main css file -->
-    <link rel="stylesheet" href="css/custom/style.css">
+    <link rel="stylesheet" href="css/custom/style.css?v=1.2">
     <!-- responsive css file -->
-    <link rel="stylesheet" href="css/responsive/responsive.css">
+    <link rel="stylesheet" href="css/responsive/responsive.css?v=1.2">
     <!-- favicon -->
-    <link rel="icon" type="image/png" href="img/favicon.png">
+    <link rel="icon" type="image/png" href="img/favicon.png?v=1.2">
 
 
     <!--[if lt IE 9]>
@@ -180,7 +180,14 @@
     <!-- active js -->
 
     <div class="postText animated">
-            <div class="preview-single-pages"><div class="footerTxt"><h4>Contact us: info@breyleebeauty.com</h4>
+            <div class="preview-single-pages">
+                <div class="footerTxt">
+                <h6>Contact Us: info@breyleebeauty.com</h6>
+                <h6>Legal Affairs: firm@pb-iplaw.com</h6>
+                4541 North Prospect Road<br>
+                Suite 300A<br>
+                Peoria Heights, Illinois 61616<br>
+                (309)598-2028</p>
             </div>
         </div></div>
 </body>
