--- a/eyelash-growth-serum.html
+++ b/eyelash-growth-serum.html
@@ -106,7 +106,13 @@
     <div class="blogArea secPdng text-right">
         <div class="container">
             <article class="row">
-			
+			    <div class="col-lg-4 col-md-6 animated">
+                    <div class="singlePost">
+                        <div class="postImg"><a href="#"><img src="img1/m-1-0.jpg" alt=""></a></div>
+                        
+                        <div class="postContent"></div>
+                    </div>
+                </div>
                 <div class="col-lg-4 col-md-6 animated">
                     <div class="singlePost">
                         <div class="postImg"><a href="#"><img src="img1/m-1-2.jpg" alt=""></a></div>
@@ -198,7 +204,18 @@
 					<!-- <article class="singleBlog"> -->                       
                     
     <!-- ======= 1.06 Cta Area ====== -->
-	
+	<div class="ctaArea secPdngB animated">
+        <div class="container">
+            <div class="row ctaRow">
+                <div class="col-md-12">
+                    <div class="ctaImgOne">
+                        <img src="img1/ma0.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="ctaArea secPdngB animated">
         <div class="container">
             <div class="row ctaRow">
