--- a/eyelash-growth-serum.html
+++ b/eyelash-growth-serum.html
@@ -9,9 +9,9 @@
     <title>Eyelash Growth Serum, BREYLEE Gentle Botanical Eyelash Serum - Cruelty Free, Hypoallergenic, Got Thicker, Stronger, Healthier Eyelash - (3ml / 0.1 Fl. Oz.)</title>
 
     <!-- main css file -->
-    <link rel="stylesheet" href="css/custom/style.css">
+    <link rel="stylesheet" href="css/custom/style.css?v=1.2">
     <!-- responsive css file -->
-    <link rel="stylesheet" href="css/responsive/responsive.css">
+    <link rel="stylesheet" href="css/responsive/responsive.css?v=1.2">
     <!-- favicon -->
     <link rel="icon" type="image/png" href="img/favicon.png">
 
@@ -153,6 +153,14 @@
                         <div class="postImg"><a href="#"><img src="img1/m-1-6.jpg" alt=""></a></div>
 						
 						<div class="postContent"></div>
+
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 animated">
+                    <div class="singlePost">
+                        <div class="postImg"><a href="#"><img src="img1/m-1-7.jpg" alt=""></a></div>
+                        
+                        <div class="postContent"></div>
 
                     </div>
                 </div>
