--- a/eyelash-growth-serum.html
+++ b/eyelash-growth-serum.html
@@ -9,11 +9,11 @@
     <title>Eyelash Growth Serum, BREYLEE Gentle Botanical Eyelash Serum - Cruelty Free, Hypoallergenic, Got Thicker, Stronger, Healthier Eyelash - (3ml / 0.1 Fl. Oz.)</title>
 
     <!-- main css file -->
-    <link rel="stylesheet" href="css/custom/style.css?v=1.2">
+    <link rel="stylesheet" href="css/custom/style.css?v=1.3">
     <!-- responsive css file -->
-    <link rel="stylesheet" href="css/responsive/responsive.css?v=1.2">
+    <link rel="stylesheet" href="css/responsive/responsive.css?v=1.3">
     <!-- favicon -->
-    <link rel="icon" type="image/png" href="img/favicon.png">
+    <link rel="icon" type="image/png" href="img/favicon.png?v=1.3">
 
 
     <!--[if lt IE 9]>
