--- a/eyelash-growth-serum.html
+++ b/eyelash-growth-serum.html
@@ -164,6 +164,12 @@
 
                     </div>
                 </div>
+                <div class="embed-responsive embed-responsive-4by3">
+                  <iframe class="embed-responsive-item" src="video/breylee-video.mp4"></iframe>
+                </div>
+                <div class="embed-responsive embed-responsive-4by3">
+                  <iframe class="embed-responsive-item" src="video/breylee-video-1.mp4"></iframe>
+                </div>
                 
 <!-- </article> -->
 
